fix(christmas): 소스코드 리팩토링 및 Badge enum 타입 추가